# Energy-Forecasting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data.nosync/: nysio_links.toml
data.nosync/transformed_data/: weather_transformed.parquet
data_information/: PTID_name_mapping.json  weather_location_mapping.json
flask/: app.py  swagger.yml  views.py
flask/static/: dataframe.css  datatable.js  index.js
flask/templates/: dataframe.html  index.html  profile.html
models/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/saved_model/variables/: variables.data-00000-of-00001  variables.index
predictions/: predictions.py  weather_api_call.py
scripts/: 10_load_prediction.ipynb  11_visualization.ipynb  1_scrape_nysio_data.ipynb  2_combine_csvs.ipynb  3_explore_load.ipynb  4_explore_weather.ipynb  5_combine_load_weather.ipynb  6_merged_exploration.ipynb  7_modelling_preprocessing.ipynb  8_modelling.ipynb  9_weather_forecasting.ipynb  combine_data.ipynb  combine_load_weather.ipynb  explore_load.ipynb  explore_merged.ipynb  explore_weather.ipynb  get_data.ipynb  merged_exploration.ipynb  modelling_preprocessing.ipynb  scrape_nysio_data.ipynb  transform_weather_energy.ipynb
