[tool.poetry]
name = "energy-forecasting"
version = "0.1.0"
description = "Forecasting energy demand for New York state"
authors = ["jmoro0408 <james.moro.11@gmail.com>"]
readme = "README.md"
packages = [{include = "energy_forecasting"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
tomli = "^2.0.1"
requests = "^2.31.0"
polars = "^0.18.3"
pyarrow = "^12.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
